Fixed bug on mobile with edit dialogue positioning

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -470,8 +470,7 @@ html {
             app-edit-modal {
                 .modalContainer {
                     .editModal {
-                        width: 95%;                  
-                        position: absolute;
+                        width: 95%;
                         left: 2.5%;
                     }
                 }
